--- a/BlogFrontend/wwwroot/index.html
+++ b/BlogFrontend/wwwroot/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlogFrontend.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="[invalid url, do not cite]" rel="stylesheet">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 
@@ -29,12 +29,13 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="js/Editior.js"></script>
-    <script src="js/audioPlayer.js"></script>
-    
+    <script src="js/Editor.js"></script>
+ 
+    <script src="js/site.js"></script>
+
 </body>
 
 </html>
